src/OpenCvSharpExtern/core.h

CVAPI(ExceptionStatus) core_completeSymm(cv::_InputOutputArray *mtx, int lowerToUpper)
{
    return cvTry([&] {
    cv::completeSymm(*mtx, lowerToUpper != 0);
    });
}
CVAPI(ExceptionStatus) core_setIdentity(cv::_InputOutputArray *mtx, interop::Scalar s)
{
    return cvTry([&] {
    cv::setIdentity(*mtx, cpp(s));
    });
}
CVAPI(ExceptionStatus) core_determinant(cv::_InputArray *mtx, double *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::determinant(*mtx);
    });
}
CVAPI(ExceptionStatus) core_trace(cv::_InputArray *mtx, interop::Scalar *returnValue)
{
    return cvTry([&] {
    *returnValue = c(cv::trace(*mtx));
    });
}
CVAPI(ExceptionStatus) core_invert(cv::_InputArray *src, cv::_OutputArray *dst, int flags, double *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::invert(*src, *dst, flags);
    });
}
CVAPI(ExceptionStatus) core_solve(cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, int flags, int *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::solve(*src1, *src2, *dst, flags);
    });
}
CVAPI(ExceptionStatus) core_solveLP(cv::_InputArray *Func, cv::_InputArray *Constr, cv::_OutputArray *z, int *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::solveLP(*Func, *Constr, *z);
    });
}
CVAPI(ExceptionStatus) core_sort(cv::_InputArray *src, cv::_OutputArray *dst, int flags)
{
    return cvTry([&] {
    cv::sort(*src, *dst, flags);
    });
}
CVAPI(ExceptionStatus) core_sortIdx(cv::_InputArray *src, cv::_OutputArray *dst, int flags)
{
    return cvTry([&] {
    cv::sortIdx(*src, *dst, flags);
    });
}
CVAPI(ExceptionStatus) core_solveCubic(cv::_InputArray *coeffs, cv::_OutputArray *roots, int *returnValue)
{
    return cvTry([&] {
    *returnValue =  cv::solveCubic(*coeffs, *roots);
    });
}
CVAPI(ExceptionStatus) core_solvePoly(cv::_InputArray *coeffs, cv::_OutputArray *roots, int maxIters, double *returnValue)
{
    return cvTry([&] {
    *returnValue =  cv::solvePoly(*coeffs, *roots, maxIters);
    });
}
CVAPI(ExceptionStatus) core_eigen(cv::_InputArray *src, cv::_OutputArray *eigenvalues,    cv::_OutputArray *eigenvectors, int *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::eigen(*src, *eigenvalues, *eigenvectors) ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) core_calcCovarMatrix_Mat(cv::Mat **samples, int nsamples, cv::Mat *covar, 
                                     cv::Mat *mean, int flags, int ctype)
{
    return cvTry([&] {
    std::vector<cv::Mat> samplesVec(nsamples);
    for (int i = 0; i < nsamples; i++)    
        samplesVec[i] = *samples[i];
    
    cv::calcCovarMatrix(&samplesVec[0], nsamples, *covar, *mean, flags, ctype);
    });
}
CVAPI(ExceptionStatus) core_calcCovarMatrix_InputArray(cv::_InputArray *samples, cv::_OutputArray *covar, 
                                            cv::_InputOutputArray *mean, int flags, int ctype)
{
    return cvTry([&] {
    cv::calcCovarMatrix(*samples, *covar, *mean, flags, ctype);
    });
}
CVAPI(ExceptionStatus) core_PCACompute(cv::_InputArray *data, cv::_InputOutputArray *mean,
                            cv::_OutputArray *eigenvectors, int maxComponents)
{
    return cvTry([&] {
    cv::PCACompute(*data, *mean, *eigenvectors, maxComponents);
    });
}
CVAPI(ExceptionStatus) core_PCAComputeVar(cv::_InputArray *data, cv::_InputOutputArray *mean,
                               cv::_OutputArray *eigenvectors, double retainedVariance)
{
    return cvTry([&] {
    cv::PCACompute(*data, *mean, *eigenvectors, retainedVariance);
    });
}
CVAPI(ExceptionStatus) core_PCAProject(cv::_InputArray *data, cv::_InputArray *mean,
                            cv::_InputArray *eigenvectors, cv::_OutputArray *result)
{
    return cvTry([&] {
    cv::PCAProject(*data, *mean, *eigenvectors, *result);
    });
}
CVAPI(ExceptionStatus) core_PCABackProject(cv::_InputArray *data, cv::_InputArray *mean,
                                cv::_InputArray *eigenvectors, cv::_OutputArray *result)
{
    return cvTry([&] {
    cv::PCABackProject(*data, *mean, *eigenvectors, *result);
    });
}
CVAPI(ExceptionStatus) core_SVDecomp(cv::_InputArray *src, cv::_OutputArray *w,
                          cv::_OutputArray *u, cv::_OutputArray *vt, int flags)
{
    return cvTry([&] {
    cv::SVDecomp(*src, *w, *u, *vt, flags);
    });
}
CVAPI(ExceptionStatus) core_SVBackSubst(cv::_InputArray *w, cv::_InputArray *u, cv::_InputArray *vt,
                             cv::_InputArray *rhs, cv::_OutputArray *dst)
{
    return cvTry([&] {
    cv::SVBackSubst(*w, *u, *vt, *rhs, *dst);
    });
}
CVAPI(ExceptionStatus) core_Mahalanobis(cv::_InputArray *v1, cv::_InputArray *v2, cv::_InputArray *icovar, double *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::Mahalanobis(*v1, *v2, *icovar);
    });
}
CVAPI(ExceptionStatus) core_dft(cv::_InputArray *src, cv::_OutputArray *dst, int flags, int nonzeroRows)
{
    return cvTry([&] {
    cv::dft(*src, *dst, flags, nonzeroRows);
    });
}
CVAPI(ExceptionStatus) core_idft(cv::_InputArray *src, cv::_OutputArray *dst, int flags, int nonzeroRows)
{
    return cvTry([&] {
    cv::idft(*src, *dst, flags, nonzeroRows);
    });
}
CVAPI(ExceptionStatus) core_dct(cv::_InputArray *src, cv::_OutputArray *dst, int flags)
{
    return cvTry([&] {
    cv::dct(*src, *dst, flags); 
    });
}
CVAPI(ExceptionStatus) core_idct(cv::_InputArray *src, cv::_OutputArray *dst, int flags)
{
    return cvTry([&] {
    cv::idct(*src, *dst, flags);
    });
}
CVAPI(ExceptionStatus) core_mulSpectrums(cv::_InputArray *a, cv::_InputArray *b, cv::_OutputArray *c, int flags, int conjB)
{
    return cvTry([&] {
    cv::mulSpectrums(*a, *b, *c, flags, conjB != 0);
    });
}
CVAPI(ExceptionStatus) core_getOptimalDFTSize(int vecsize, int *returnValue)
{
    return cvTry([&] {
    *returnValue = cv::getOptimalDFTSize(vecsize);
    });
}
CVAPI(ExceptionStatus) core_randu_InputArray(cv::_InputOutputArray *dst, cv::_InputArray *low, cv::_InputArray *high)
{
    return cvTry([&] {
    cv::randu(*dst, *low, *high);
    });
}
CVAPI(ExceptionStatus) core_randu_Scalar(cv::_InputOutputArray *dst, interop::Scalar low, interop::Scalar high)
{
    return cvTry([&] {
    cv::randu(*dst, cpp(low), cpp(high));
    });
}
CVAPI(ExceptionStatus) core_randn_InputArray(cv::_InputOutputArray *dst, cv::_InputArray *mean, cv::_InputArray *stddev)
{
    return cvTry([&] {
    cv::randn(*dst, *mean, *stddev);
    });
}
CVAPI(ExceptionStatus) core_randn_Scalar(cv::_InputOutputArray *dst, interop::Scalar mean, interop::Scalar stddev)
{
    return cvTry([&] {
    cv::randn(*dst, cpp(mean), cpp(stddev));
    });
}
CVAPI(ExceptionStatus) core_randShuffle(cv::_InputOutputArray *dst, double iterFactor, uint64 *rng)
{
    return cvTry([&] {
    cv::RNG rng0;
    cv::randShuffle(*dst, iterFactor, &rng0);
    *rng = rng0.state;
    });
}
CVAPI(ExceptionStatus) core_kmeans(
    cv::_InputArray *data, int k, cv::_InputOutputArray *bestLabels,
    interop::TermCriteria criteria, int attempts, int flags, cv::_OutputArray *centers, 
    double* returnValue)
{
    return cvTry([&] {
    *returnValue = cv::kmeans(*data, k, *bestLabels, cpp(criteria), attempts, flags, entity(centers));
    });
}